--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     -->
     <meta charset="utf-8" />
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-    <meta name="author" content="BieYuu" />
-    <meta name="description" content="BeiYuu's Blog" />
+    <meta name="author" content="行云流水" />
+    <meta name="description" content="行云流水's Blog" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="/css/default.css" type="text/css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -18,27 +18,29 @@
 
     <div class="home-menu">
         <div class="home-icon-con">
-            <a class="home-menu-icon" href="/">BeiYuu</a>
+            <a class="home-menu-icon" href="/">行云流水</a>
             <a class="home-follow" href="#" title="Contact Me">+</a>
         </div>
         <div class="home-contact">
-            <a href="http://weibo.com/beiyuu/" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
-            <a href="http://www.douban.com/people/beiyuu/" target="_blank" style="text-align:center;"><img src="http://www.douban.com/favicon.ico" alt="" width="22"/></a>
-            <a href="http://instagram.com/beiyuu/" target="_blank" style="text-align:right"><img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/00c6602/images/ico/favicon.ico" alt="" width="22"/></a>
+            <a href="#" target="_blank" style="text-align:center;"><img src="/images/google_gmail.ico" alt="" width="25"/></a>
+            <!-- <a href="#" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
+            <a href="#" target="_blank" style="text-align:center;"><img src="http://www.douban.com/favicon.ico" alt="" width="22"/></a>
+            <a href="#" target="_blank" style="text-align:right"><img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/00c6602/images/ico/favicon.ico" alt="" width="22"/></a>
+             -->
         </div>
     </div>
 
     {{ content }}
 
-    <!--*********************************************************-->
-    <!--****** 宝贝儿，看见这个时候，删掉下面的统计代码哦~ ******-->
-    <!--************* 再推荐下我的第一篇博客哦~~ ****************-->
-    <!--*********************************************************-->
-
+    <!-- 统计代码 -->
     <div class="hide">
-        <script type="text/javascript" src="http://js.tongji.linezing.com/2727758/tongji.js"></script>
+
+        <!-- <script type="text/javascript" src="http://js.tongji.linezing.com/2727758/tongji.js"></script>
         <noscript><a href="http://www.linezing.com"><img src="http://img.tongji.linezing.com/2727758/tongji.gif"/></a></noscript>
+         -->
     </div>
+    <!-- 统计代码 -->
+
     <script type="text/javascript">
         $(function(){
             $('.home-follow').click(function(e){
