--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: page
 
 <div id="disqus_container">
     <div style="margin-bottom:20px" class="right">
-        <script type="text/javascript" charset="utf-8">
+        <!-- <script type="text/javascript" charset="utf-8">
         (function(){
           var _w = 86 , _h = 16;
           var param = {
@@ -24,16 +24,20 @@ layout: page
             ralateUid:'1855270953', /**关联用户的UID，分享微博会@该用户(可选)*/
             language:'zh_cn', /**设置语言，zh_cn|zh_tw(可选)*/
             rnd:new Date().valueOf()
-          }
+            } 
           var temp = [];
           for( var p in param ){
             temp.push(p + '=' + encodeURIComponent( param[p] || '' ) )
           }
           document.write('<iframe allowTransparency="true" frameborder="0" scrolling="no" src="http://hits.sinajs.cn/A1/weiboshare.html?' + temp.join('&') + '" width="'+ _w+'" height="'+_h+'"></iframe>')
         })()
-        </script>
+    </script> -->
     </div>
-    <a href="#" class="comment" onclick="return false;">点击查看评论</a>
+    <!-- <a href="#" class="comment" onclick="return false;">点击查看评论</a> -->
+    <!-- UY BEGIN -->
+    <div id="uyan_frame"></div>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1830939"></script>
+    <!-- UY END -->
     <div id="disqus_thread"></div>
 </div>
 
