--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,10 +33,10 @@ layout: page
         })()
     </script> -->
     </div>
-    <!-- <a href="#" class="comment" onclick="return false;">点击查看评论</a> -->
+    <a href="#" class="comment" onclick="return false;">点击查看评论</a>
     <!-- UY BEGIN -->
     <div id="uyan_frame"></div>
-    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1830939"></script>
+    <!-- <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1830939"></script> -->
     <!-- UY END -->
     <div id="disqus_thread"></div>
 </div>
