--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,12 +33,11 @@ layout: page
         })()
     </script> -->
     </div>
-    <a href="#" class="comment" onclick="return false;">点击查看评论</a>
+    <!-- <a href="#" class="comment" onclick="return false;">点击查看评论</a> -->
     <!-- UY BEGIN -->
     <div id="uyan_frame"></div>
-    <!-- <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1830939"></script> -->
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1830939"></script>
     <!-- UY END -->
-    <div id="disqus_thread"></div>
 </div>
 
 <!--<iframe width="100%" height="75" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=75&fansRow=2&ptype=1&speed=0&skin=5&isTitle=0&noborder=0&isWeibo=0&isFans=0&uid=1855270953&verifier=375b89d6&dpc=1"></iframe>-->
