add Webpage statistical code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,8 @@
 
     <!-- 统计代码 -->
     <div class="hide">
-
-        <!-- <script type="text/javascript" src="http://js.tongji.linezing.com/2727758/tongji.js"></script>
-        <noscript><a href="http://www.linezing.com"><img src="http://img.tongji.linezing.com/2727758/tongji.gif"/></a></noscript>
-         -->
+         <script type="text/javascript" src="http://js.tongji.linezing.com/3290866/tongji.js"></script>
+         <noscript><a href="http://www.linezing.com"><img src="http://img.tongji.linezing.com/3290866/tongji.gif"/></a></noscript>
     </div>
     <!-- 统计代码 -->
 
