add 'powered by'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,10 @@
 
     {{ content }}
 
+    <div class="footer_poweredby">
+        Powered by <a href="http://jekyllrb.com/" target="_blank" >Jekyll</a> & <a href="https://github.com/" target="_blank">GitHub</a>.
+        Theme modified from <a href="http://beiyuu.com/why-blog/" target="_blank">BaiYuu</a>.
+    </div>
     <!-- 统计代码 -->
     <div class="hide">
          <script type="text/javascript" src="http://js.tongji.linezing.com/3290866/tongji.js"></script>
