fixed a spelling mistake;add author name in post page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
     <div class="footer_poweredby">
         Powered by <a href="http://jekyllrb.com/" target="_blank" >Jekyll</a> & <a href="https://github.com/" target="_blank">GitHub</a>.
-        Theme modified from <a href="http://beiyuu.com/why-blog/" target="_blank">BaiYuu</a>.
+        Theme modified from <a href="http://beiyuu.com/why-blog/" target="_blank">BeiYuu</a>.
     </div>
     <!-- 统计代码 -->
     <div class="hide">
