--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: page
 
 <div class="entry">
     <h1 class="entry-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
-    <p class="entry-date">{{ page.date|date:"%Y-%m-%d" }}</p>
+    <p class="entry-date">{{ page.date|date:"%Y-%m-%d" }}<br />{{ page.author }}</p>
     {{ content }}
 </div>
 
