--- a/css/default.css
+++ b/css/default.css
@@ -181,7 +181,9 @@ h3.about {color:#777;margin-top:20px;font-size:22px;margin-bottom:10px}
 .footer_poweredby{  
     display:block;
     color: #999;
-    font-size: 14px;
+    font-size: 15px;
     text-align:right;
     margin:5px 10px;
+    font-family:Palatino, georgia, "times new roman", "宋体";
+    font-style:italic;
 }
