--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,13 @@
             <a class="home-follow" href="#" title="Contact Me">+</a>
         </div>
         <div class="home-contact">
-            <a href="#" target="_blank" style="text-align:center;"><img src="/images/google_gmail.ico" alt="" width="25"/></a>
-            <!-- <a href="#" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
+            <div class="home-contact-content">
+                <ul>
+                    <li><a target="_blank" href="#" style="text-decoration:none;color:white;">Contact Me</a></li>
+                </ul>
+            </div>
+            <!-- 
+            <a href="#" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
             <a href="#" target="_blank" style="text-align:center;"><img src="http://www.douban.com/favicon.ico" alt="" width="22"/></a>
             <a href="#" target="_blank" style="text-align:right"><img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/00c6602/images/ico/favicon.ico" alt="" width="22"/></a>
              -->
