--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,14 @@
     </div>
     <!-- 统计代码 -->
     <div class="hide">
-         <script type="text/javascript" src="http://js.tongji.linezing.com/3290866/tongji.js"></script>
-         <noscript><a href="http://www.linezing.com"><img src="http://img.tongji.linezing.com/3290866/tongji.gif"/></a></noscript>
+        <script type="text/javascript">
+            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://"
+                    : " http://");
+            document
+                    .write(unescape("%3Cscript src='"
+                            + _bdhmProtocol
+                            + "hm.baidu.com/h.js%3Fb4ad86aa4be7563ba724572053e59722' type='text/javascript'%3E%3C/script%3E"));
+        </script>
     </div>
     <!-- 统计代码 -->
 
