网站统计代码改为同步代码

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,18 +51,14 @@
 		. Theme modified from
 		<a href="http://beiyuu.com/why-blog/" target="_blank">BeiYuu</a>
 		.
-	</div>
+    </div>
+
 	<!-- 统计代码 -->
 	<div class="hide">
-		<script>
-			var _hmt = _hmt || [];
-			(function() {
-				var hm = document.createElement("script");
-				hm.src = "//hm.baidu.com/hm.js?b4ad86aa4be7563ba724572053e59722";
-				var s = document.getElementsByTagName("script")[0];
-				s.parentNode.insertBefore(hm, s);
-			})();
-		</script>
+        <script type="text/javascript">
+            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb4ad86aa4be7563ba724572053e59722' type='text/javascript'%3E%3C/script%3E"));
+        </script>        
 	</div>
 	<!-- 统计代码 -->
 
