--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
     * Author:         BeiYuu
     -->
 <meta charset="utf-8" />
-<title>{% if page.title %}{{ page.title }} | {% endif %}{{
-	site.title }}</title>
+<title>{% if page.title %}{{ page.title }} | {% endif %}{{site.title }}</title>
 <meta name="author" content="行云流水" />
 <meta name="description" content="行云流水's Blog" />
 <meta name="viewport"
@@ -55,10 +54,15 @@
 
 	<!-- 统计代码 -->
 	<div class="hide">
-        <script type="text/javascript">
-            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb4ad86aa4be7563ba724572053e59722' type='text/javascript'%3E%3C/script%3E"));
-        </script>        
+        <script>
+            var _hmt = _hmt || [];
+            (function() {
+                var hm = document.createElement("script");
+                hm.src = "//hm.baidu.com/hm.js?b4ad86aa4be7563ba724572053e59722";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>    
 	</div>
 	<!-- 统计代码 -->
 
