--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,84 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<!--
-    * Author:         BeiYuu
-    -->
-<meta charset="utf-8" />
-<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-<meta name="author" content="行云流水" />
-<meta name="description" content="行云流水's Blog" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-<link rel="stylesheet" href="/css/default.css" type="text/css" />
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-<link rel="alternate" type="application/atom+xml" title="Recent Entries"
-	href="{{ site.feed }}" />
-<script src="/js/jquery-1.7.1.min.js" type="text/javascript"></script>
-</head>
-<body>
-
-	<div class="home-menu">
-		<div class="home-icon-con">
-			<a class="home-menu-icon" href="/">行云流水</a>
-			<a class="home-follow" href="#" title="Contact Me">+</a>
-		</div>
-		<div class="home-contact">
-			<div class="home-contact-content">
-				<ul>
-					<li>
-						<a target="_blank" href="#"
-							style="text-decoration: none; color: white;">Contact Me</a>
-					</li>
-				</ul>
-			</div>
-			<!-- 
-            <a href="#" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
-            <a href="#" target="_blank" style="text-align:center;"><img src="http://www.douban.com/favicon.ico" alt="" width="22"/></a>
-            <a href="#" target="_blank" style="text-align:right"><img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/00c6602/images/ico/favicon.ico" alt="" width="22"/></a>
-             -->
-		</div>
-	</div>
-
-	{{ content }}
-
-	<div class="footer_poweredby">
-		Powered by
-		<a href="http://jekyllrb.com/" target="_blank">Jekyll</a>
-		&
-		<a href="https://github.com/" target="_blank">GitHub</a>
-		. Theme modified from
-		<a href="http://beiyuu.com/why-blog/" target="_blank">BeiYuu</a>
-		.
-    </div>
-
-	<!-- 统计代码 -->
-	<div class="hide">
-            <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?b4ad86aa4be7563ba724572053e59722";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
-	</div>
-	<!-- 统计代码 -->
-
-	<script type="text/javascript">
-		$(function() {
-			$('.home-follow').click(function(e) {
-				e.preventDefault();
-
-				if ($('.home-contact').is(':visible')) {
-					$('.home-contact').slideUp(100);
-				} else {
-					$('.home-contact').slideDown(100);
-				}
-			});
-		})
-	</script>
-</body>
-</html>
+---
+theme:
+  name: dinky
+---
+{% include JB/setup %}
+{% include themes/dinky/default.html %}
