--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,24 +1,5 @@
 ---
-layout: page
+layout: default
 ---
-<link rel="stylesheet" href="/js/prettify/prettify.css" />
-
-<div class="entry">
-    <h1 class="entry-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
-    <p class="entry-date">{{ page.date|date:"%Y-%m-%d" }}<br />{{ page.author }}</p>
-    {{ content }}
-</div>
-
-<div id="disqus_container">
-    <div style="margin-bottom:20px" class="right">
-    </div>
-    <!-- <a href="#" class="comment" onclick="return false;">点击查看评论</a> -->
-    <!-- UY BEGIN -->
-    <div id="uyan_frame"></div>
-    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1830939"></script>
-    <!-- UY END -->
-</div>
-
-<!--<iframe width="100%" height="75" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=75&fansRow=2&ptype=1&speed=0&skin=5&isTitle=0&noborder=0&isWeibo=0&isFans=0&uid=1855270953&verifier=375b89d6&dpc=1"></iframe>-->
-
-<script src="/js/post.js" type="text/javascript"></script>
+{% include JB/setup %}
+{% include themes/dinky/post.html %}
