--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -81,15 +81,10 @@
       <p><small>Hosted on <a href="http://pages.github.com/">GitHub Pages</a> using the <a href="https://github.com/sodabrew/theme-dinky">Dinky theme</a> for <a href="http://jekyllbootstrap.com/">Jekyll Bootstrap</a></small></p>
       <!-- 网站统计 -->
       <div style="display:none;">
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?b4ad86aa4be7563ba724572053e59722";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb4ad86aa4be7563ba724572053e59722' type='text/javascript'%3E%3C/script%3E"));
+</script>          
       </div>
       </footer>
     </div>
